<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_graph"
        android:icon="@drawable/discover_default"
        android:title="@string/bottom_nav_discover" />
    <item
        android:id="@+id/search_graph"
        android:icon="@drawable/search_default"
        android:title="@string/bottom_nav_search" />
    <item
        android:id="@+id/genre_graph"
        android:icon="@drawable/genre_default"
        android:title="@string/bottom_nav_genres" />
    <item
        android:id="@+id/artist_graph"
        android:icon="@drawable/artist_default"
        android:title="@string/bottom_nav_artist" />
</menu>
